# axum-admin

./: .env  .gitignore  Cargo.toml  api.http  db.sql
src/: main.rs
src/common/: data_format.rs  err.rs  jwt.rs  macros.rs  mod.rs  req.rs  res.rs
src/handler/: user.rs
src/mid/: api_log.rs  auth.rs  mod.rs
src/model/: menu.rs  user.rs
src/models/: db.rs  mod.rs  user.rs
src/module/sys/user/: mod.rs  router.rs
src/modules/sys/user/: mod.rs  model.rs  router.rs
src/route/: user.rs
src/utils/: resp.rs
tests/: http_test.rs
