[package]
name = "axum-admin"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'   # 调整优化等级
lto = true        # 链接时优化
codegen-units = 1 # 调整并行代码生成单元数量，默认16个

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
dotenv = "0.15.0"
hyper = "0.14.27"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
time = { version = "0.3.29", features = ["macros"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = [
    "local-time",
    "env-filter",
] }
